// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractTypeDefinitionFromTableSql mysql should be able to extract types in this example 1`] = `
TypeDefinitionOfResourceTable {
  "columns": Array [
    TypeDefinitionOfResourceColumn {
      "name": "id",
      "type": Array [
        "number",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "uuid",
      "type": Array [
        "string",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "created_at",
      "type": Array [
        "Date",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "url",
      "type": Array [
        "string",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "caption",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "credit",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "alt_text",
      "type": Array [
        "string",
        "null",
      ],
    },
  ],
  "name": "image",
}
`;

exports[`extractTypeDefinitionFromTableSql mysql should be able to extract types in this other example 1`] = `
TypeDefinitionOfResourceTable {
  "columns": Array [
    TypeDefinitionOfResourceColumn {
      "name": "id",
      "type": Array [
        "number",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "suggestion_id",
      "type": Array [
        "number",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "effective_at",
      "type": Array [
        "Date",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "created_at",
      "type": Array [
        "Date",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "status",
      "type": Array [
        "string",
      ],
    },
  ],
  "name": "suggestion_version",
}
`;

exports[`extractTypeDefinitionFromTableSql postgres should be able to extract types in this example 1`] = `
TypeDefinitionOfResourceTable {
  "columns": Array [
    TypeDefinitionOfResourceColumn {
      "name": "id",
      "type": Array [
        "number",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "uuid",
      "type": Array [
        "string",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "created_at",
      "type": Array [
        "Date",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "url",
      "type": Array [
        "string",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "description",
      "type": Array [
        "string",
        "null",
      ],
    },
  ],
  "name": "photo",
}
`;

exports[`extractTypeDefinitionFromTableSql postgres should be able to extract types in this other example 1`] = `
TypeDefinitionOfResourceTable {
  "columns": Array [
    TypeDefinitionOfResourceColumn {
      "name": "id",
      "type": Array [
        "number",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "job_id",
      "type": Array [
        "number",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "effective_at",
      "type": Array [
        "Date",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "created_at",
      "type": Array [
        "Date",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "location_id",
      "type": Array [
        "number",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "photo_ids_hash",
      "type": Array [
        "Buffer",
      ],
    },
  ],
  "name": "job_version",
}
`;

exports[`extractTypeDefinitionFromTableSql postgres should be able to extract types in this other example, having a check constraint with nested parens 1`] = `
TypeDefinitionOfResourceTable {
  "columns": Array [
    TypeDefinitionOfResourceColumn {
      "name": "id",
      "type": Array [
        "number",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "uuid",
      "type": Array [
        "string",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "created_at",
      "type": Array [
        "Date",
      ],
    },
    TypeDefinitionOfResourceColumn {
      "name": "status",
      "type": Array [
        "string",
      ],
    },
  ],
  "name": "job",
}
`;
